# agent-engine

./: .env.exapmle  .gitignore  MANIFEST.in  PACKAGING_GUIDE.md  README.md  build.bat  build_and_upload.py  check_vectors.py  pyproject.toml  run.bat  run.sh  test_new_methods.py  test_routing_agent.py  test_simple_message.py
agent_engine/: __init__.py
agent_engine/a2a_client/: __init__.py  a2a_client.py
agent_engine/agent/: __init__.py  base_agent.py  prompts.yaml  skill_identifier.py
agent_engine/agent_logger/: __init__.py  agent_logger.py  log_directory_manager.py
agent_engine/llm_client/: LLMMonitoring.md  __init__.py  azure_client.py  llm_client.py  llm_monitor.py  qz_client.py  sii_client.py
agent_engine/memory/: SCALABLE_MEMORY.md  __init__.py  embedder.py  memory.py  scalable_memory.py
agent_engine/prompt/: __init__.py  prompt_loader.py  prompts.example.yaml
agent_engine/service/: __init__.py  auto_service.py
agent_engine/utils/: __init__.py  file_utils.py  id_utils.py  network_utils.py  project_root.py
agents/ArxivSearchAgent/: __main__.py  agent.py  arxiv_categories.json  category_navigator.py  config.py  prompts.yaml  query_parser.py
agents/ICUAssistantAgent/: __main__.py  agent.py  models.py  test_search_v1.json
agents/ICUDataIngestionAgent/: __init__.py  agent.py  prompts.yaml  umls_translator.py
agents/ICUMemoryAgent/: BLUEPRINT.md  agent.py  collector.py  prompts.yaml  sub_type_descriptions.json  test_events.json  umls_concept_extractor.py  utils.py
agents/ICURiskPrediction/: prompts.yaml
agents/ICURiskPredictionAgent/: events_subtype_stats.py  icu_sequence_dataloader.py  labeling_risks.py  prompts.yaml  risk_confirm_subtypes.json  risk_diagnosis.py  risk_label_indexer.py  risk_labeling.py  risks_table.json  risks_table.py
agents/JudgeAgent/: capabilities.json  capabilities_with_tasks.json  capability_builder.py  config.py  judge_memory.py  offline_run.py  prompts.yaml  raw_capabilities.json  task_capabilities.json  test.py  view_capabilities.json
agents/PaperAnalysisAgent/: __main__.py  agent.py  config.py  prompts.yaml
agents/PaperFetchAgent/: __main__.py  agent.py  config.py
agents/PaperFilterAgent/: __main__.py  agent.py  config.py  memory.py
agents/ResearchAgent/: arxiv_database.py  arxiv_database_health_monitor.py  arxiv_gym_env.py  arxiv_memory.py  client.py  config.py  demo.py  example_usage.py  main.py  paper_analyze.py  paper_download.py  paper_filter.py  paper_memory.py  paper_search.py  prompts.yaml  qiji_library.py  researcher.py  reward.py  server.py  session_memory.py  start_server.py  start_service.py  test_concurrency.py  test_optimized_session_memory.py  test_token_estimation.py  vector_density.py
core/arxiv/: __init__.py  arxiv.py  arxiv_id_parser.py  config.py  figure.py  page.py  paper.py  paper_db.py  prompts.yaml  table.py
core/arxiv_fetcher/: __init__.py  arxiv_fetcher.py  arxiv_paper.py
core/github_fetcher/: README.md  __init__.py  github_fetcher.py
core/holos/: __init__.py  agents_data.json  config.py  holos_client.py
core/icu_web/: README_UI_WIRED.md  frontend_bridge.py  icu_collector_adapter.py  session_runner.py
core/umls/: UMLS-concept.py  UMLS-semantic.py  __init__.py  umls_client.py  umls_client_usage.md
core/utils/: __init__.py  date_tool.py
docs/: ICU_BLUEPRINT.md  ICU_CLINICAL_SUGGESTION_AGENT.md  ICU_MEMORY_AGENT.md  ICU_RISK_AGENT.md  ICU_RISK_TRAINING.md  ICU_UNIFIED_SYSTEM.md  LOGGING_GUIDE.md  ultramemory_architecture.md  ultramemory_usage.md
example_prompts/cursor/: Chat Prompt.txt
guides/: Agent Prompt Guide.md  tools.md
scripts/: build_arxiv_vectors_qiji.py  bulk_store_arxiv_daily.py  cleanup_logs.py  llm_usage_cost.py  migrate_arxiv_legacy_to_segments.py  precompute_patient_caches.py  stat_subtypes.py
scripts/icu_clear/: first_clean.py  second_clean.py  sub_type_reason.json
scripts/utils/: count_python_lines.py
service/: daily_report.py  frontier_server.py
service/eric-vpn/: USAGE.md  config.py  generate_api_key.py  proxy_server.py  test.py
service/frontier/: daily_report.py  frontier_server.py  test_arxiv.py
service/icu_agents/: server.py
service/icu_web_server/: server.py
service/llm_monitor/: open_web.py  server.py  test_simulate_inputs.py
test/: daily_papers.json  demo_agent_logger.py  demo_multi_agent_logging.py  fetch_daily_papers.py  memory_example.py  profile_memory_init.py  safe_cleanup.py  simple_shard_test.py  simple_sharding_test.py  test_a2a_client.py  test_a2a_client_example.py  test_a2a_client_simple.py  test_agent_logger.py  test_agent_logger_fixed.py  test_agent_logging_simple.py  test_arxiv_db.py  test_arxiv_download.py  test_azure_max_tokens.py  test_chat_stream.py  test_client.py  test_concurrent_embedding.py  test_context_manager.py  test_delete_task_result.py  test_embedder.py  test_ememory_chromadb.py  test_event_cache_batch.py  test_event_cache_comprehensive.py  test_event_cache_fixed.py  test_event_cache_qdrant.py  test_event_cache_sharding.py  test_event_cache_simple.py  test_event_cache_simple_fix.py  test_holos_client.py  test_judge_memory.py  test_judge_memory_mab.py  test_judge_memory_task_history.py  test_llm_monitor.py  test_log_directory_management.py  test_log_rotation.py  test_memory_detailed.py  (+19 more)
test_client/: azure_client.py  llm_client.py  quick_test.py  test_concurrent_embedding.py
(+168 files in other folders)
