[project]
name = "agent-engine"
version = "0.1.0"
description = "A Python library for building intelligent agents"
authors = [{name = "EricSanchez", email = "niexiaohangeric@163.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13.5"

dependencies = [
    "a2a-sdk>=0.3.1",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=2.5.0",
    "uv>=0.8.12",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
project = [
    "arxiv>=2.2.0",
    "docling>=2.45.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pypdf2>=3.0.1",
]

# 开发依赖
dev = [
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 关键：明确指定包发现规则
[tool.setuptools.packages.find]
where = ["."]
include = ["agent_engine*"]  # 只包含agent_engine包
exclude = [
    "agents*",        # 排除agents目录
    "core*",          # 排除core目录
    "test*",          # 排除test目录
    "*.bat",          # 排除批处理文件
]

# 确保不包含项目特定的配置文件
[tool.setuptools.package-data]
agent_engine = ["*.txt", "*.yml", "*.yaml", "*.json"]

# 排除项目特定的配置文件
[tool.setuptools.exclude-package-data]
"*" = ["agents/*", "core/*", "test/*"]
