[project]
name = "agent-engine"
version = "0.1.0"
description = "A Python library for building intelligent agents"
authors = [{name = "EricSanchez", email = "niexiaohangeric@163.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13.5"

dependencies = [
    "a2a-sdk[http-server]>=0.3.1",
    "holos-sdk>=0.1.0",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "duckdb>=1.3.2",
]

[project.optional-dependencies]
opts = [
    "aiohttp>=3.12.15",
    "python-dotenv>=1.1.1",
    "arxiv>=2.2.0",
    "pypdf2>=3.0.1",
    "tqdm>=4.66.4",
    "fastapi>=0.115.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "flask>=3.1.2",
    "apscheduler>=3.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "docling>=2.45.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 关键：明确指定包发现规则
[tool.setuptools.packages.find]
where = ["."]
include = ["agent_engine*"]  # 只包含agent_engine包
exclude = [
    "agents*",        # 排除agents目录
    "core*",          # 排除core目录
    "test*",          # 排除test目录
    "*.bat",          # 排除批处理文件
]

# 确保不包含项目特定的配置文件
[tool.setuptools.package-data]
agent_engine = ["*.txt", "*.yml", "*.yaml", "*.json"]

# 排除项目特定的配置文件
[tool.setuptools.exclude-package-data]
"*" = ["agents/*", "core/*", "test/*"]
