[project]
name = "agent-engine"
version = "0.1.0"
description = "A Python library for building intelligent agents"
authors = [{name = "EricSanchez", email = "niexiaohangeric@163.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.5"

dependencies = [
    "a2a-sdk[http-server]>=0.3.1",
    "holos-sdk>=0.1.0",
    "numpy>=1.24",
    "openai>=1.100.2",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "sentence-transformers>=2.5.0",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "duckdb>=1.3.2",
    "pyinstrument>=5.1.1",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2.10",
]

[project.optional-dependencies]
opts = [
    "aiohttp>=3.12.15",
    "arxiv>=2.2.0",
    "pypdf2>=3.0.1",
    "tqdm>=4.66.4",
    "fastapi>=0.115.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "flask>=3.1.2",
    "apscheduler>=3.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "docling>=2.45.0",
    "llvmlite>=0.44.0",
    "numba==0.61.2",
    "umap-learn>=0.5.9.post2",
    "plotly>=6.3.0",
    "flask-socketio>=5.5.1",
    "python-socketio>=5.13.0",
    "python-engineio>=4.12.2",
    "eventlet>=0.40.3",
    "flask-cors>=6.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 关键：明确指定包发现规则
[tool.setuptools.packages.find]
where = ["."]
include = ["agent_engine*"]  # 只包含agent_engine包
exclude = [
    "agents*",        # 排除agents目录
    "core*",          # 排除core目录
    "test*",          # 排除test目录
    "service*",       # 排除service目录
    "scripts*",       # 排除scripts目录
    "web*",           # 排除web目录
    "docs*",          # 排除docs目录
    "database*",      # 排除database目录
    "logs*",          # 排除logs目录
    "example_prompts*", # 排除example_prompts目录
    "guides*",        # 排除guides目录
    "*.bat",          # 排除批处理文件
    "*.sh",           # 排除shell脚本
    "*.zip",          # 排除压缩文件
    "*.sqlite",       # 排除数据库文件
    "*.json",         # 排除项目配置文件
]

# 确保包含agent_engine包内的配置文件
[tool.setuptools.package-data]
agent_engine = [
    "**/*.yaml", 
    "**/*.yml", 
    "**/*.txt", 
    "**/*.json",
    "**/*.example.*"
]

# 排除项目特定的配置文件和目录
[tool.setuptools.exclude-package-data]
"*" = [
    "agents/*", 
    "core/*", 
    "test/*", 
    "service/*",
    "scripts/*",
    "web/*",
    "docs/*",
    "database/*",
    "logs/*",
    "example_prompts/*",
    "guides/*"
]
